<resources>
    <string name="app_name">Realtime wearable ECG monitoring</string>
    <string name="icon">application icon</string>
    <string name="realtimewearableecg_app">ECG monitoring App</string>
    <string name="connect_to_the_device">Connect to the device</string>
    <string name="exit">Exit</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="label_state">State</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">no data</string>
    <string name="label_data">Skin temperature (°C)</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="connected">Connected</string>
    <string name="unknown_service">unknow_service</string>
    <string name="unknown_characteristic">unknow_characteristic</string>
    <string name="ppg_signal">PPG Signal</string>
    <string name="heartrate_bpm">HeartRate (BpM) :</string>
    <string name="ecg_signal">ECG Signal</string>
    <string name="spo2">SpO2 (%) :</string>

</resources>