<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"

    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textColor="#F44336"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heartrate_bpm"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/hr_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spo2"
                android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/spo2_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ecg_signal"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/ecg_plot" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView41000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ppg_signal"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:id="@+id/ppg_plot" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>